# flusso

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  main.rs  pipe.rs
src/interfaces/: websocket.rs
