[package]
name = "flusso"
version = "0.1.0"
authors = ["felipe <tifonzafel@gmail.com>"]
description = ""
readme = "README.md"
repository = "https://github.com/felipeZ/flusso"
categories = []
keywords = [ ]
license = "Apache-2.0"
edition = "2018"

[dependencies]


[lib]
name = "flusso"
path = "src/lib.rs"
