[package]
authors = ["felipe <tifonzafel@gmail.com>"]
categories = ["asynchronous"]
description = ""
edition = "2018"
keywords = ["stream"]
license = "Apache-2.0"
name = "flusso"
readme = "README.md"
repository = "https://github.com/felipeZ/flusso"
version = "0.1.0"

[dependencies]
async-channel = "1.6"
async-std = {version = "1.10", features = ["unstable", "attributes"]}
async-tungstenite = {version = "0.16", features = ["async-std-runtime", "async-tls"]}
dotenv = "0.15"
env_logger = "0.9"
futures = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
surf = "2.3"

[lib]
name = "flusso"
path = "src/lib.rs"
